# ncurses

./: .appveyor.yml  .gitignore  ANNOUNCE  COPYING  INSTALL  MANIFEST  Makefile.glibc  Makefile.in  NEWS  README  README.MinGW  TO-DO  VERSION  aclocal.m4  announce.html  announce.html.in  conanfile.py  config.guess  config.sub  configure  configure.in  dist.mk  mingw8  mk-0th.awk  mk-1st.awk  mk-2nd.awk  mk-dlls.sh  mk-dlls.sh.in  mk-hdr.awk  ncurses.lsm
Ada95/: Makefile.in  README  TODO  aclocal.m4  configure  configure.in  make-tar.sh  mk-1st.awk
Ada95/ada_include/: Makefile.in  terminal_interface-curses-aux.adb  terminal_interface-curses-aux.ads  terminal_interface-curses-forms-choice_field_types.adb  terminal_interface-curses-forms-choice_field_types.ads  terminal_interface-curses-forms-field_types-alpha.adb  terminal_interface-curses-forms-field_types-alpha.ads  terminal_interface-curses-forms-field_types-alphanumeric.adb  terminal_interface-curses-forms-field_types-alphanumeric.ads  terminal_interface-curses-forms-field_types-enumeration-ada.adb  terminal_interface-curses-forms-field_types-enumeration-ada.ads  terminal_interface-curses-forms-field_types-enumeration.adb  terminal_interface-curses-forms-field_types-enumeration.ads  terminal_interface-curses-forms-field_types-intfield.adb  terminal_interface-curses-forms-field_types-intfield.ads  terminal_interface-curses-forms-field_types-ipv4_address.adb  (+40 more)
Ada95/html/: Makefile  (+126 more)
c++/: Makefile.in  NEWS  PROBLEMS  README-first  cursesapp.cc  cursesapp.h  cursesf.cc  cursesf.h  cursesm.cc  cursesm.h  cursesmain.cc  cursesp.cc  cursesp.h  cursespad.cc  cursesw.cc  cursesw.h  cursslk.cc  cursslk.h  demo.cc  edit_cfg.sh  etip.h  etip.h.in  internal.h  modules
doc/: ncurses-intro.doc
form/: Makefile.in  READ.ME  fld_arg.c  fld_attr.c  fld_current.c  fld_def.c  fld_dup.c  fld_ftchoice.c  fld_ftlink.c  fld_info.c  fld_just.c  fld_link.c  fld_max.c  fld_move.c  fld_newftyp.c  fld_opts.c  fld_pad.c  fld_page.c  fld_stat.c  fld_type.c  fld_user.c  form.h  form.priv.h  frm_adabind.c  frm_cursor.c  frm_data.c  frm_def.c  frm_driver.c  frm_hook.c  frm_opts.c  frm_page.c  frm_post.c  frm_req_name.c  frm_scale.c  frm_sub.c  frm_user.c  frm_win.c  fty_alnum.c  fty_alpha.c  fty_enum.c  (+11 more)
include/: Caps  Caps-ncurses  Caps.aix4  Caps.hpux11  Caps.keys  Caps.osf1r5  Caps.uwin  MKkey_defs.sh  MKparametrized.sh  MKterm.h.awk.in  Makefile.in  capdefaults.c  config_h.in  curses.h.in  curses.tail  curses.wide  edit_cfg.sh  hashed_db.h  headers  nc_access.h  nc_alloc.h  nc_mingw.h  nc_panel.h  nc_string.h  nc_win32.h  ncurses_cfg.hin  ncurses_defs  ncurses_dll.h  ncurses_dll.h.in  term_entry.h  termcap.h.in  tic.h  unctrl.h.in  win32_curses.h
m/: 0001-ncurses-6.4.patch
man/: MKterminfo.sh  Makefile.in  captoinfo.1m  clear.1  curs_add_wch.3x  curs_add_wchstr.3x  curs_addch.3x  curs_addchstr.3x  curs_addstr.3x  curs_addwstr.3x  curs_attr.3x  curs_beep.3x  curs_bkgd.3x  curs_bkgrnd.3x  curs_border.3x  curs_border_set.3x  curs_clear.3x  curs_color.3x  curs_delch.3x  curs_deleteln.3x  curs_extend.3x  curs_get_wch.3x  curs_get_wstr.3x  curs_getcchar.3x  curs_getch.3x  curs_getstr.3x  curs_getyx.3x  curs_in_wch.3x  curs_in_wchstr.3x  curs_inch.3x  curs_inchstr.3x  curs_initscr.3x  curs_inopts.3x  curs_ins_wch.3x  curs_ins_wstr.3x  curs_insch.3x  curs_insstr.3x  curs_instr.3x  curs_inwstr.3x  curs_kernel.3x  (+104 more)
menu/: Makefile.in  READ.ME  eti.h  headers  llib-lmenu  m_adabind.c  m_attribs.c  m_cursor.c  m_driver.c  m_format.c  m_global.c  m_hook.c  m_item_cur.c  m_item_nam.c  m_item_new.c  m_item_opt.c  m_item_top.c  m_item_use.c  m_item_val.c  m_item_vis.c  m_items.c  m_new.c  m_opts.c  m_pad.c  m_pattern.c  m_post.c  m_req_name.c  m_scale.c  m_spacing.c  m_sub.c  m_trace.c  m_userptr.c  m_win.c  menu.h  menu.priv.h  mf_common.h  modules
misc/: Makefile.in  emx.src  gen-pkgconfig.in  gen_edit.sh  hackguide.doc  hackguide.html  makellib  ncu-indent  ncurses-config.in  ncurses-intro.doc  ncurses-intro.html  run_tic.in  run_tic.sh  shlib  tdlint  terminfo.src
ncurses/: MKcaptab.awk  MKexpanded.sh  MKfallback.sh  MKkeyname.awk  MKlib_gen.sh  MKnames.awk  MKunctrl.awk  Makefile.in  SigAction.h  alloc_entry.c  captoinfo.c  comp_error.c  comp_expand.c  comp_hash.c  comp_parse.c  comp_scan.c  curses.priv.h  define_key.c  hardscroll.c  hashmap.c  keyok.c  lib_acs.c  lib_adabind.c  lib_addch.c  lib_addstr.c  lib_baudrate.c  lib_beep.c  lib_bkgd.c  lib_box.c  lib_clear.c  lib_clrbot.c  lib_clreol.c  lib_color.c  lib_cur_term.c  lib_data.c  lib_delch.c  lib_delwin.c  lib_dft_fgbg.c  lib_doupdate.c  lib_echo.c  (+91 more)
package/: mingw-ncurses.nsi  mingw-ncurses.spec  ncurses.map  ncurses.spec  ncurses.sym  ncursest.map  ncursest.spec  ncursest.sym  ncursestw.map  ncursestw.sym  ncursesw.map  ncursesw.sym
panel/: Makefile.in  headers  llib-lpanel  modules  p_above.c  p_below.c  p_bottom.c  p_delete.c  p_hidden.c  p_hide.c  p_move.c  p_new.c  p_replace.c  p_show.c  p_update.c  panel.c  panel.priv.h
progs/: MKtermsort.sh  Makefile.in  capconvert  clear.c  clear_cmd.c  clear_cmd.h  dump_entry.c  dump_entry.h  infocmp.c  modules  progs.priv.h  reset_cmd.c  reset_cmd.h  tabs.c  tic.c  toe.c  tparm_type.c  tput.c  transform.c  tset.c  tty_settings.c  tty_settings.h
tack/: HISTORY  Makefile.in  README  aclocal.m4  configure  configure.in  modules  ncurses_tst.hin
test/: Makefile.in  README  aclocal.m4  back_ground.c  background.c  blue.c  bs.c  cardfile.c  chgat.c  clip_printw.c  color_content.c  color_name.h  color_set.c  combine.c  configure  configure.in  demo_altkeys.c  demo_defkey.c  demo_forms.c  demo_menus.c  demo_new_pair.c  demo_panels.c  demo_tabs.c  demo_termcap.c  demo_terminfo.c  ditto.c  doit  dots.c  dots_curses.c  dots_mvcur.c  dots_termcap.c  dots_xcurses.c  dup_field.c  echochar.c  edit_field.c  edit_field.h  extended_color.c  filter.c  firework.c  firstlast.c  (+62 more)
test/package/: mingw-ncurses-examples.spec  ncurses-examples.spec
test/package/debian/: copyright  rules
test/package/debian-mingw/: copyright
test/package/debian-mingw64/: copyright
(+691 files in other folders)
